<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    card_view:cardElevation="5dp"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/label_search_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/search_settings"/>

        <TextView
            android:id="@+id/label_filters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label_search_settings"
            android:textColor="@android:color/black"
            android:text="@string/filters"/>

        <TextView
            android:id="@+id/label_remove_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label_filters"
            android:textColor="@color/colorPrimary"
            android:text="@string/remove_or_add"/>

        <Switch
            android:id="@+id/switch_filters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/label_filters"
            android:layout_alignBottom="@+id/label_remove_add"
            android:layout_toRightOf="@+id/label_remove_add"
            android:layout_toEndOf="@+id/label_remove_add"
            android:padding="16dp"/>

        <ImageView
            android:id="@+id/decorate_strip_search_settings"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_below="@+id/label_remove_add"
            android:layout_alignStart="@+id/label_filters"
            android:layout_alignLeft="@+id/label_filters"
            android:layout_alignEnd="@+id/switch_filters"
            android:layout_alignRight="@+id/switch_filters"
            android:src="@android:color/darker_gray"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/label_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/decorate_strip_search_settings"
            android:textColor="@android:color/black"
            android:text="@string/show"/>

        <RadioGroup
            android:id="@+id/rgMapFilters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/decorate_strip_search_settings"
            android:layout_toRightOf="@+id/label_show"
            android:layout_toEndOf="@+id/label_show"
            android:layout_alignRight="@+id/switch_filters"
            android:layout_alignEnd="@+id/switch_filters"
            android:paddingLeft="8dp"
            android:paddingStart="8dp">

            <RadioButton
                android:id="@+id/rb_all_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_status"
                android:textColor="@drawable/radiobutton_textcolor" />

            <RadioButton
                android:id="@+id/rb_only_sellers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_seller_post_only"
                android:textColor="@drawable/radiobutton_textcolor"/>

            <RadioButton
                android:id="@+id/rb_only_seekers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_seeker_post_only"
                android:textColor="@drawable/radiobutton_textcolor"/>

        </RadioGroup>

    </RelativeLayout>

</android.support.v7.widget.CardView>