<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="in.bangbit.plamobidemo.MyPostFragment">

    <EditText
        android:id="@+id/edPostText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:maxLength="@integer/post_max_characters"/>

    <TextView
        android:id="@+id/tvSymbolsQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edPostText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="8dp" />

    <LinearLayout
        android:id="@+id/container_btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/tvSymbolsQuantity"
        android:padding="8dp"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/tvBtnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textAllCaps="true"
            android:text="@string/save" />

        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/ic_arrow_down"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/container_btn_save"
        android:padding="8dp"
        android:background="#EEEEEE"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/cbSaveAsSell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_as_i_sell"
            android:layout_marginBottom="8dp"/>

        <CheckBox
            android:id="@+id/cbSaveAsSeek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_as_i_seek"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tag_this_in_the_map_on"
        android:layout_alignTop="@+id/container_btn_save"
        android:layout_alignBottom="@id/container_btn_save"
        android:gravity="center_vertical"/>

    <RadioGroup
        android:id="@+id/rgTagThisMapOn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/container_btn_save">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_location" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wherever_i_move"/>

    </RadioGroup>
</RelativeLayout>
