<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="in.bangbit.plamobidemo.MapFragment"
    tools:ignore="ContentDescription">

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.v7.widget.CardView
        android:id="@+id/cvMarkerMessage"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <ImageView
                android:id="@+id/imMessagePhoto"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_margin="16dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/imMessagePhoto"
                android:layout_alignBottom="@+id/imMessagePhoto"
                android:gravity="center_vertical"
                android:layout_toRightOf="@+id/imMessagePhoto"
                android:layout_toEndOf="@+id/imMessagePhoto"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvMessageUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/tvMessageDistance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#bdbdbd"/>

            </LinearLayout>

            <ImageView
                android:id="@+id/decorate_strip_popup_message"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/imMessagePhoto"
                android:src="@android:color/darker_gray"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tvMessageText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/decorate_strip_popup_message"
                android:padding="16dp"
                android:lines="4"
                android:ellipsize="end"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/tvMessageTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvMessageText"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:paddingRight="8dp"
                android:paddingEnd="8dp"
                android:textColor="#bdbdbd"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:layout_below="@+id/tvMessageTime"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvMessageCall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@mipmap/icon_message_call"
                    android:gravity="center_horizontal"
                    android:textColor="@android:color/black"
                    android:textAllCaps="true"
                    android:text="@string/call"/>

                <TextView
                    android:id="@+id/tvMessageChat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="32dp"
                    android:paddingRight="32dp"
                    android:drawableTop="@mipmap/icon_message_chat"
                    android:gravity="center_horizontal"
                    android:textColor="@android:color/black"
                    android:textAllCaps="true"
                    android:text="@string/chat"/>

                <TextView
                    android:id="@+id/tvMessageEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@mipmap/icon_message_email"
                    android:gravity="center_horizontal"
                    android:textColor="@android:color/black"
                    android:textAllCaps="true"
                    android:text="@string/email"/>

            </LinearLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <include layout="@layout/view_search_settings"
        android:id="@+id/cvSearchSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:layout_margin="8dp"
        android:visibility="gone"/>


</FrameLayout>
